[package]
name = "cache-fn"
version = "0.1.0"
edition = "2021"
description = "A Rust library for caching functions"
license = "GPL-3.0"
authors = ["Md.Sadiq <mohammadsadiq4950@gmail.com>"]
repository = "https://github.com/MdSadiqMd/CacheFn"
documentation = "https://docs.rs/cache-fn"
readme = "README.md"
keywords = ["cache", "function"]
categories = ["caching"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"